Fix overflow bug in contact section

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -318,7 +318,7 @@ header {
 	top: 0;
 	text-align: center;
 	z-index: 30;
-	overflow: hidden;
+	overflow-x: hidden;
 }
 .fa-chevron-right {
 	font-size: 50px;
